// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<bh-modal-stub open="true" title="some specific text" backgroundcloses="true" languagesreadyfortrain="[object Object]">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column"><strong class="text-color-danger text-center bh-grid__item">
        some specific text</strong>
      <!---->
      <div class="train-modal__wrapper bh-grid__item--nested">
        <div><strong>some specific text</strong>
          <div class="train-modal__wrapper__content-requirements">
            <div class="train-modal__wrapper__content__item">
              <p><span>requirement 1</span>
                <language-badge-stub language="en" size="small" class="train-modal__wrapper__content__item__flag"></language-badge-stub>
              </p>
            </div>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>some specific text</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;

exports[`TrainModal.vue add warning renders correctly 1`] = `
<bh-modal-stub open="true" title="some specific text" backgroundcloses="true" languagesreadyfortrain="[object Object]">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        some specific text</strong>
      <div class="train-modal__wrapper bh-grid__item--nested">
        <!---->
        <div><strong>some specific text</strong>
          <div class="train-modal__wrapper__content-warnings">
            <div class="train-modal__wrapper__content__item">
              <p><span>warning 1</span>
                <language-badge-stub language="en" size="small" class="train-modal__wrapper__content__item__flag"></language-badge-stub>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>some specific text</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<bh-modal-stub open="true" title="some specific text" backgroundcloses="true" languagesreadyfortrain="[object Object]">
  <div class="train-modal">
    <div class="bh-grid bh-grid--column">
      <!----> <strong class="text-color-primary text-center bh-grid__item">
        some specific text</strong>
      <!---->
    </div>
  </div>
  <div class="bh-grid__item text-center train-modal__buttons">
    <bh-button-stub primary="true" type="button">
      <bh-icon-stub value="school"></bh-icon-stub> <span>some specific text</span>
    </bh-button-stub>
  </div>
</bh-modal-stub>
`;
